# pico-projects

./: .gitattributes  README.md
dht/: CMakeLists.txt  dht.c
dht11_7seg/: CMakeLists.txt  README.md  dht11_7seg.fzz  dht11_7seg_barebones.fzz  main.c
rtctime_7seg/: CMakeLists.txt  README.md  main.c  pico_sdk_import.cmake
ssd_oled_hello/: CMakeLists.txt  ss_oled_demo.c
temp_7seg/: CMakeLists.txt  README.md  main.c  main.cpp  temp_7seg.fzz
